--- a/style/scss/_bar-inf.scss
+++ b/style/scss/_bar-inf.scss
@@ -1,5 +1,3 @@
-@import "_var";
-
 .bar_information {
     margin-top: 300px;
     text-align: center;
@@ -7,32 +5,22 @@
     height: 340px;
     background: $bar-color;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
+    align-items: center;
 
-    .statistics__number {
-        display: flex;
-        justify-content: space-around;
-        margin-bottom: 50px;
-
-        .numbers {
-            width: 100%;
-            color: $number-color;
-            font-family: $number-font;
-            font-size: 77px;
-            font-weight: 700;
-            line-height: 38.37px;
-        }
+    .numbers {
+        width: 100%;
+        color: $number-color;
+        font-family: $number-font;
+        font-size: 77px;
+        font-weight: 700;
+        line-height: 38.37px;
     }
+    
 
-    .statistics__text {
-        display: flex;
-        justify-content: space-around;
-
-        .texts {
-            width: 100%;
-            @include text($light_color, $mariad, 26px, uppercase, 0)
-        }
+    .texts {
+        margin-top: 50px;
+        @include text($light_color, $mariad, 26px, uppercase, 0)
     }
 }
 
