--- a/style/scss/_team.scss
+++ b/style/scss/_team.scss
@@ -14,63 +14,65 @@
         h2 {
             @include text($titels-color, Athelas, 61px, uppercase, 0);
             line-height: 25.46px;
-  
         }
+
 
         .content__line {
             width: 442px;
-            height: 1px;
-            background-color: #88543a;
+            border: 1px solid #88543a;
             margin: 40px auto 87px;
         }
 
         .content__text {
-            width: 1137px;
+            width: 100%;
+            max-width: 1137px;
             text-align: center;
             @include text(black, $text-font, 31px, none, 0.9px)
         }
 
-        .team__photo {
-            margin-top: 135px;
-            @include team;
+        .container__photo {
+            width: 100%;
 
-            .photo__one {
-                background: url(https://st.depositphotos.com/1000423/2642/i/950/depositphotos_26422791-stock-photo-funny-fluffy-cat-in-a.jpg);
-            }
+            display: flex;
+            justify-content: space-around;
 
-            .photo__two {
-                background: url(https://woman-project.com/uploads/1334037600/a5b8d8e8f68752.jpg);
-            }
-
-            .photo__three {
-                background: url(https://cs12.pikabu.ru/post_img/2019/01/19/4/154787322112285708.jpg);
-            }
-
-            .photo {
-                width: 30%;
-                height: 570px;
-                background-size: cover;
-
+            .team__photo {
+                width: 450px;
+                height: 100%;
+                max-height: 900px;
+                margin-top: 135px;
             }
         }
 
-        .team__name {
-            @include team;
-            margin-top: 50px;
-            margin-bottom: 55px;
-
-            .name {
-                @include text(black, $text-font, 31px, none, 0)
-            }
+        .photo__one {
+            background: url(https://st.depositphotos.com/1000423/2642/i/950/depositphotos_26422791-stock-photo-funny-fluffy-cat-in-a.jpg);
         }
 
-        .team__text {
-            @include team;
-
-            .text_team {
-                width: 30%;
-                @include text(black, $text-font, 20px, none, 0.6px)
-            }
+        .photo__two {
+            background: url(https://woman-project.com/uploads/1334037600/a5b8d8e8f68752.jpg);
         }
+
+        .photo__three {
+            background: url(https://cs12.pikabu.ru/post_img/2019/01/19/4/154787322112285708.jpg);
+        }
+
+        .photo {
+            width: 100%;
+            height: 570px;
+            background-size: cover;
+
+        }
+    }
+
+    .team__name {
+        text-align: center;
+        margin-top: 50px;
+        margin-bottom: 55px;
+        @include text(black, $text-font, 31px, none, 0)
+    }
+
+    .team__description {
+        text-align: center;
+        @include text(black, $text-font, 20px, none, 0.6px)
     }
 }
