--- a/style/scss/_our-gallery.scss
+++ b/style/scss/_our-gallery.scss
@@ -61,13 +61,9 @@
         .button__slik {
             display: flex;
             justify-content: space-between;
-            
-            .next {
-                @include buttom
-            }
 
-            .prev {
-                @include buttom
+            .buttons{
+                @include button
             }
         }
     }
